Fix overflow scrolling

--- a/src/react-components/layout/RoomLayout.scss
+++ b/src/react-components/layout/RoomLayout.scss
@@ -2,8 +2,8 @@
 
 :local(.room-layout) {
   display: grid;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   grid-template-columns:
     [main] auto
     [sidebar] minmax(0, min-content);
